--- a/templates/arrive/index.html.twig
+++ b/templates/arrive/index.html.twig
@@ -1,44 +1,6 @@
-{# {% extends 'base.html.twig' %}
-
-{% block title %}Rapport index{% endblock %}
-
-{% block body %}
-    <h1>Rapport index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Numero de vol</th>
-                <th>Date de Vol</th>
-                <th>Date de Rapport</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for rapport in rapports %}
-            <tr>
-                <td>{{ rapport.id }}</td>
-                <td>{{ rapport.numeroVol }}</td>
-                <td>{{ rapport.dateVol ? rapport.dateVol|date('Y-m-d') : '' }}</td>
-                <td>{{ rapport.getDateRapport() ? rapport.getDateRapport()|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_rapport_show', {'id': rapport.id}) }}">show</a>
-                    <a href="{{ path('app_rapport_edit', {'id': rapport.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_rapport_new') }}">Create new</a>
-{% endblock %} #}
 {% extends 'template.html.twig' %}
 {% block pageName %} 
- Depart
+ Arrivé
 {% endblock %}
 
 {% block body %}
@@ -48,7 +10,7 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                    <h3 class="card-title mr-5">Liste des Rapport de Départ</h3>
+                    <h3 class="card-title mr-5">Liste des rapports arrivé</h3>
                    
             
                     <div class="card-tools">
@@ -77,10 +39,10 @@
                     </tr>
                   </thead>
                   <tbody>
-                {% for rapport in rapports %}
+                {% for i,rapport in rapports %}
 
                     <tr>
-                        <td>{{ rapport.id }}</td>
+                        <td>{{ i +1 }}</td>
                         <td>{{ rapport.numeroVol ? : '-' }}</td>
                         <td>{{ rapport.dateVol ? rapport.dateVol|date('Y-m-d') : '-' }}</td>
                         <td>{{ rapport.getDateRapport() ? rapport.getDateRapport()|date('Y-m-d') : '-' }}</td>
@@ -88,7 +50,7 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="5" >Aucun Rapport</td>
+                        <td colspan="5" >(Aucun rapport effectué)</td>
                     </tr>
                 {% endfor %}
                   </tbody>
@@ -98,7 +60,7 @@
                <!-- /.card-footer -->
             
                 <div class="card-footer clearfix">
-                    <a class="ml-5 btn btn-sm btn-success text-light float-right"  href ="{{ path('app_depart_nouveau') }}"><i class="fas fa-plus"> Nouveau rapport</i> </a>
+                    <a class="ml-5 btn btn-sm btn-success text-light float-right"  href ="{{ path('app_arrive_nouveau') }}"><i class="fas fa-plus"> Nouveau rapport</i> </a>
                 </div>
                 <!-- /.card-footer -->
             </div>
