--- a/templates/arrive/new.html.twig
+++ b/templates/arrive/new.html.twig
@@ -11,16 +11,13 @@
         <div class="row">
             <!-- left column -->
             <div class="col-md-12">
-                <div class="card card-primary">
+                <div class="card ">
                 <div class="card-header">
-                    <h1 class="card-title">Effectuer un rapport de vol départ</h1>
+                    <h1 class="card-title">Effectuer un rapport de vol Arrivé</h1>
                 </div>
                 <!-- /.card-header -->
                 <!-- form start -->
                 <div class="card-body">
-                <pre>
-                 
-                </pre>
                 {{ form_start(form) }}
                     <div class="card-body">
                     <div class="form-group">
