--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
           <input type="text" class="form-control" placeholder="Matricule" value="{{ last_username }}" name="no_mat" id="inputNo_mat" class="form-control" autocomplete="username" required autofocus>
           <div class="input-group-append">
             <div class="input-group-text">
-              <span class="fas fa-envelope"></span>
+              <span class="fas fa-user"></span>
             </div>
           </div>
         </div>
