--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -41,9 +41,9 @@
                     <div class="form-group">
                          {{ form_row(form.roles, {label: 'Roles'}) }}
                     </div>
-                    <div class="form-group">
+                    {# <div class="form-group">
                          {{ form_row(form.password, {label: 'Mot de Passe'}) }}
-                    </div>
+                    </div> #}
 
                     <!-- /.card-body -->
                     <div class="card-footer">
